--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.13.0",
     "eslint-plugin-react": "^7.29.4",
+    "typescript": "^4.6.4",
     "vite": "^2.9.2"
   }
 }
